--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>SchizoCompany</title>
-    <meta name="description" content="SchizoCompany Сборка для Lethal Company">
+    <title>BreakToolz</title>
+    <meta name="description" content="BreakToolz - тупа сайт с классными программами">
 </head>
-<body style="background-image: url(img/back.jpg);">
+<body>
     <header>
-        <h1 class="unselectable">BreakToolz</h1>
+        <h1>BreakToolz</h1>
+        <h4>Програмки 🤯</h4>
     </header>
+    <div class="main">
+        <a href="https://www.qbittorrent.org/download" target="_blank"><h2>🔘 qBittorrent (Лучший торрент)</h2></a>
+        <a href="https://rufus.ie/ru/" target="_blank"><h2>🔘 Rufus (Создание установочной флешки)</h2></a>
+        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="" target="_blank"><h2>🔘</h2></a>
+    </div>
 </body>
 </html>
