--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>BreakToolz</title>
     <meta name="description" content="BreakToolz - тупа сайт с классными программами">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
