--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <header>
         <h1>BreakToolz</h1>
         <h4>Програмки 🤯</h4>
+        <h4>*для установки жми на текст</h4>
     </header>
     <div class="main">
         <a href="https://www.qbittorrent.org/download" target="_blank"><h2>🔘 qBittorrent (Лучший торрент)</h2></a>
         <a href="https://rufus.ie/ru/" target="_blank"><h2>🔘 Rufus (Создание установочной флешки)</h2></a>
-        <a href="" target="_blank"><h2>🔘</h2></a>
-        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="/win-activate.html" target="_blank"><h2>🔘 Активация Windows 10-11 Pro</h2></a>
+        <a href="https://github.com/Xeroday/Spotify-Ad-Blocker/releases/download/v1.8.1.0/EZBlocker.exe" target="_blank"><h2>🔘 EZBlocker (Кряк спотифая)</h2></a>
         <a href="" target="_blank"><h2>🔘</h2></a>
         <a href="" target="_blank"><h2>🔘</h2></a>
     </div>
