--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="main">
         <a href="https://www.qbittorrent.org/download" target="_blank"><h2>🔘 qBittorrent (Лучший торрент)</h2></a>
         <a href="https://rufus.ie/ru/" target="_blank"><h2>🔘 Rufus (Создание установочной флешки)</h2></a>
-        <a href="/win-activate.html" target="_blank"><h2>🔘 Активация Windows 10-11 Pro</h2></a>
         <a href="https://github.com/Xeroday/Spotify-Ad-Blocker/releases/download/v1.8.1.0/EZBlocker.exe" target="_blank"><h2>🔘 EZBlocker (Кряк спотифая)</h2></a>
-        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="https://disk.yandex.ru/d/xJztfYXDCtWo9A" target="_blank"><h2>🔘 Активатор Windows</h2></a>
+        <a href="https://www.7-zip.org/download.html" target="_blank"><h2>🔘 7Zip (Четкий Архиватор)</h2></a>
         <a href="" target="_blank"><h2>🔘</h2></a>
     </div>
 </body>
