--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://github.com/Xeroday/Spotify-Ad-Blocker/releases/download/v1.8.1.0/EZBlocker.exe" target="_blank"><h2>🔘 EZBlocker (Кряк спотифая)</h2></a>
         <a href="https://disk.yandex.ru/d/xJztfYXDCtWo9A" target="_blank"><h2>🔘 Активатор Windows</h2></a>
         <a href="https://www.7-zip.org/download.html" target="_blank"><h2>🔘 7Zip (Четкий Архиватор)</h2></a>
-        <a href="" target="_blank"><h2>🔘</h2></a>
+        <a href="https://notepad-plus-plus.org/downloads/" target="_blank"><h2>🔘 Notepad++ (Блокнот)</h2></a>
     </div>
 </body>
 </html>
