--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://disk.yandex.ru/d/xJztfYXDCtWo9A" target="_blank"><h2>🔘 Активатор Windows</h2></a>
         <a href="https://www.7-zip.org/download.html" target="_blank"><h2>🔘 7Zip (Четкий Архиватор)</h2></a>
         <a href="https://notepad-plus-plus.org/downloads/" target="_blank"><h2>🔘 Notepad++ (Блокнот)</h2></a>
-        <a href="https://crystalmark.info/en/download/" target="_blank"><h2>🔘 CrystalDiskInfo (Проверка скорости диска)</h2></a>
+        <a href="https://crystalmark.info/en/download/" target="_blank"><h2>🔘 CrystalDiskMark (Проверка скорости диска)</h2></a>
     </div>
 </body>
 </html>
