--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="https://notepad-plus-plus.org/downloads/" target="_blank"><h2>🔘 Notepad++ (Блокнот)</h2></a>
         <a href="https://crystalmark.info/en/download/" target="_blank"><h2>🔘 CrystalDiskMark (Проверка скорости диска)</h2></a>
         <a href="https://rsload.net/" target="_blank"><h2>🔘 RSLOAD.NET (Сайт с программами и сборками Windows)</h2></a>
+        <a href="https://prdownloads.sourceforge.net/windirstat/windirstat1_1_2_setup.exe" target="_blank"><h2>🔘 WinDirStat (Просмотр размера всех файлов на диске)</h2></a>
     </div>
 </body>
 </html>
